optimize the image in dark mode, fix quote mark

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -212,6 +212,6 @@ th, td
 
 @media (prefers-color-scheme: dark)
   img
-    opacity 0.8
+    opacity 1
 
 @require 'mobile.styl'
